--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ version = '0.0.0'
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     maven { url "https://oss.sonatype.org/content/repositories/releases/" }
 }
