--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
+    compileOnly("org.jetbrains:annotations:24.1.0")
+
     implementation platform("org.lwjgl:lwjgl-bom:$project.lwjglVersion")
 
     implementation "org.lwjgl:lwjgl"
