--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ lwjglVersion = 3.3.3
 jomlVersion = 1.10.5
 dominionVersion = 0.9.0
 ode4jVersion = 0.5.2
+jnoiseVersion = 4.1.0
+endecVersion = 0.1.0-pre.2
+endecGsonVersion = 0.1.0-pre.1
